# lmrs

./: Cargo.toml  README.md  build.rs
crates/cache/: Cargo.toml
crates/cache/benches/: block_pool.rs  cache_manager.rs  prefix_cache.rs  slot_layout.rs
crates/cache/src/: context.rs  kv.rs  lib.rs
crates/cache/src/block/: block.rs  mod.rs  table.rs
crates/cache/src/manager/: evict.rs  manager.rs  mod.rs  swap.rs
crates/cache/src/pool/: mod.rs  pool.rs  stats.rs
crates/cache/src/prefix/: hash.rs  mod.rs  radix.rs
crates/engine/: Cargo.toml
crates/engine/benches/: scheduler.rs
crates/engine/src/: generation.rs  lib.rs
crates/engine/src/batch/: builder.rs  mod.rs  padded.rs  varlen.rs
crates/engine/src/executor/: executor.rs  graph.rs  mod.rs  output.rs
crates/engine/src/scheduler/: budget.rs  mod.rs  policy.rs  scheduler.rs
crates/engine/src/sequence/: group.rs  mod.rs  sequence.rs  status.rs
crates/engine/src/worker/: comm.rs  mod.rs  worker.rs
crates/engine/tests/: prefill_decode.rs
crates/kernels/: Cargo.toml  README.md  build.rs
crates/kernels/benches/: ptx.rs
crates/kernels/src/: basic.rs  ffi.rs  lib.rs  ptx.rs  raw.rs  tensor_ops.rs
crates/kernels/src/activation/: gelu.rs  silu.rs
crates/kernels/src/attention/: flash.rs  masked.rs  mla.rs  mod.rs  paged.rs  sdpa.rs
crates/kernels/src/gemm/: bf16.rs  dispatch.rs  fp8.rs  int8.rs  mod.rs
crates/kernels/src/norm/: layer.rs  mod.rs  rms.rs
crates/kernels/src/pos_embed/: mod.rs  rotary.rs
crates/kernels/src/quant/: awq.rs  fp8.rs  int8.rs  mod.rs
crates/kernels/src/utils/: copy.rs  fill.rs  mod.rs
crates/model/: Cargo.toml
crates/model/benches/: config.rs
crates/model/src/: auto.rs  lib.rs
crates/model/src/config/: hparams.rs  loader.rs  mod.rs
crates/model/src/layers/: attention.rs  block.rs  mlp.rs  mod.rs
crates/model/src/loader/: mod.rs  safetensors.rs
crates/model/src/models/: base.rs  mod.rs  qwen3.rs
crates/model/src/traits/: cacheable.rs  mod.rs  model.rs
crates/ops/: Cargo.toml
crates/ops/benches/: configs.rs
crates/ops/src/: lib.rs  tensor.rs
crates/ops/src/activation/: gelu.rs  mod.rs  silu.rs
crates/ops/src/attention/: context.rs  masked.rs  mod.rs  paged.rs  sdpa.rs
crates/ops/src/embedding/: lm_head.rs  lookup.rs  mod.rs
crates/ops/src/linear/: fused_bias.rs  linear.rs  mod.rs  quantized.rs
crates/ops/src/norm/: layer_norm.rs  mod.rs  rms_norm.rs
crates/ops/src/pos_embed/: alibi.rs  mod.rs  rotary.rs
crates/runtime/: Cargo.toml
crates/runtime/benches/: allocator.rs
crates/runtime/src/: error.rs  lib.rs
crates/runtime/src/allocator/: buddy.rs  mod.rs  pool.rs  raw.rs
crates/runtime/src/device/: context.rs  mod.rs  props.rs  selector.rs
crates/runtime/src/event/: event.rs  mod.rs  timer.rs
crates/runtime/src/graph/: capture.rs  exec.rs  mod.rs  update.rs
crates/runtime/src/stream/: mod.rs  pool.rs  stream.rs
crates/sampling/: Cargo.toml
crates/sampling/benches/: sampling.rs
crates/sampling/src/: error.rs  lib.rs
crates/sampling/src/logits/: mod.rs  presence.rs  processor.rs  repetition.rs  temperature.rs
crates/sampling/src/sampler/: mod.rs  output.rs  sampler.rs
crates/sampling/src/strategies/: beam.rs  greedy.rs  min_p.rs  mod.rs  top_k.rs  top_p.rs
crates/server/: Cargo.toml
crates/server/benches/: server.rs
crates/server/src/: config.rs  engine.rs  lib.rs  main.rs
crates/server/src/handlers/: chat.rs  completions.rs  health.rs  mod.rs  models.rs
crates/server/src/middleware/: trace.rs
crates/server/src/router/: mod.rs  router.rs  state.rs
crates/server/src/types/: error.rs  mod.rs  openai.rs  streaming.rs
crates/tensor/: Cargo.toml
crates/tensor/benches/: dtype.rs  shape.rs  tensor.rs
crates/tensor/src/: error.rs  lib.rs
crates/tensor/src/dtype/: cast.rs  dtype.rs  mod.rs
crates/tensor/src/ops/: copy.rs  dispatch.rs  mod.rs  reshape.rs
crates/tensor/src/shape/: mod.rs  shape.rs  stride.rs
crates/tensor/src/storage/: cuda_buf.rs  mod.rs  shared.rs
crates/tensor/src/tensor/: display.rs  index.rs  mod.rs  tensor.rs  view.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/benches/: tokenizer.rs
crates/tokenizer/src/: error.rs  lib.rs
crates/tokenizer/src/registry/: mod.rs  registry.rs
crates/tokenizer/src/wrapper/: decode.rs  encode.rs  mod.rs  special.rs
kernels/: basic.cu  generic_kernels.cu  qwen_kernels.cu
kernels/activation/: act_quant.cu  fused_gelu_mul.cu  fused_silu_mul.cu  gelu.cu
kernels/attention/: dtype_fp8.cuh  flash_mha_bwd.cu  flash_mha_fwd.cu  masked.cu  mla_fwd.cu  paged_attention.cuh  paged_attn_bwd.cu  paged_attn_fwd.cu  sdpa.cu  softmax.cu
kernels/ffi/: activation_ffi.cu  attention_ffi.cu  cast_ffi.cu  norm_ffi.cu  ops_ffi.cu  pos_embed_ffi.cu  tensor_ffi.cu
kernels/gemm/: bf16_gemm_sm100.cu  bf16_gemm_sm89.cu  fp8_gemm_sm100.cu  int8_gemm_sm89.cu  splitk_gemm.cu
kernels/include/: bf16_utils.cuh  compatibility.cuh  cuda_utils.cuh  dispatch.cuh  fp8_utils.cuh  math.h  ptx_utils.cuh  stdint.h  vec_types.cuh
kernels/norm/: layer_norm.cu  rms_norm_bwd.cu  rms_norm_fwd.cu
kernels/ops/: activation_kernels.cuh
kernels/pos_embed/: rotary_fwd.cu  rotary_inplace.cu
kernels/quant/: awq_gemm.cu  fp8_cast.cu  int8_cast.cu
kernels/utils/: copy_blocks.cu  fill.cu  gather_scatter.cu
src/: config.rs  error.rs  ffi.rs  lib.rs  main.rs  message.rs  runtime.rs
src/api/: generation_config.rs  message.rs  mod.rs  sampling.rs
src/cache/: fast_cache.rs  key.rs  mod.rs
src/engine/: inference.rs  mod.rs
src/error/: lmrs_error.rs  mod.rs
src/llama/: backend.rs  handle.rs  mod.rs
src/model/: artifact.rs  attention.rs  block.rs  config.rs  llama.rs  loader.rs  mod.rs  model.rs  resolver.rs  rotary.rs  source.rs
src/model/kernels/: cuda.rs  mod.rs
src/model/kernels/cuda/: generic.rs  mod.rs  qwen.rs
src/model/models/: qwen3.rs
src/runtime/: config.rs  mod.rs  runtime.rs  sampler.rs  stream_chunk.rs  thinking_parser.rs
src/sampling/: mod.rs  sampler.rs
src/server/: handlers.rs  router.rs  types.rs
src/tokenizer/: mod.rs  wrapper.rs
