[package]
name = "lmrs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
blake3 = "1.8.4"
hashbrown = "0.17.0"
moka = { version = "0.12.15", features = ["sync"] }
smallvec = "1.15.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1.58"
