[package]
name = "lmrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros"] }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.10.2", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.10.2", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.10.2", features = ["cuda"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
futures = "0.3.32"
half = "2.7.1"
hf-hub = { version = "0.5.0", features = ["tokio"] }
minijinja = "2.19.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokenizers = { version = "0.23.1", default-features = false, features = ["onig"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.10", features = ["cors", "trace", "timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.1", features = ["v4"] }

[build-dependencies]
bindgen_cuda = "0.1.6"
