[workspace]
default-members = ["crates/server"]
members = [
    "crates/runtime",
    "crates/kernels",
    "crates/tensor",
    "crates/ops",
    "crates/model",
    "crates/cache",
    "crates/engine",
    "crates/sampling",
    "crates/tokenizer",
    "crates/server",
]
resolver = "2"

[workspace.dependencies]
runtime ={ path = "crates/runtime" }
kernels ={ path = "crates/kernels" }
tensor ={ path = "crates/tensor" }
cache ={ path = "crates/cache" }
model ={ path = "crates/model" }
ops ={ path = "crates/ops" }
sampling ={ path = "crates/sampling" }
tokenizer ={ path = "crates/tokenizer" }
engine ={ path = "crates/engine" }
server ={ path = "crates/server" }
anyhow = "1.0.102"
axum = "0.8.9"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.10.2", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.10.2", features = ["cuda"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
cudarc = { version = "0.19.6", features = ["cuda-12080"] }
futures = "0.3.32"
half = "2.7.1"
hf-hub = "0.5.0"
minijinja = "2.19.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
safetensors = "0.7.0"
thiserror = "2.0.18"
tokenizers = { version = "0.23.1", default-features = false, features = ["onig"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.10", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.1", features = ["v4"] }
