[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cache = { workspace = true }
model = { workspace = true }
ops = { workspace = true }
runtime = { workspace = true }
sampling = { workspace = true }
tensor = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
half = { workspace = true }
