[package]
name = "model"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cache = { workspace = true }
hf-hub = { workspace = true }
ops = { workspace = true }
runtime = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tensor = { workspace = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "config"
harness = false
