[package]
name = "model"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cache = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
hf-hub = { workspace = true }
ops = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
